--- a/game/main.css
+++ b/game/main.css
@@ -50,7 +50,7 @@ a svg path{
     height: 100%;
 }
 main{
-    background-image: url(/img/bg_2.jpg);
+    background-image: url(../img/bg_2.jpg);
     height: 100vh;
     width: 100%;
     background-size: cover;
